Prevent line break in buttons on iPad

--- a/ui/seznam.cz-2020/modalContent/signIn.css
+++ b/ui/seznam.cz-2020/modalContent/signIn.css
@@ -43,10 +43,12 @@
   justify-content: space-between;
 }
 
+:local(.button) {
+  white-space: nowrap;
+}
+
 @media (max-width: 359px) {
   :local(.button) {
     padding: 0 16px;
-
-    white-space: nowrap;
   }
 }
